deploy/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: operator
  name: operator
  namespace: kubetailor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: operator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: operator
    spec:
      serviceAccountName: kubetailor
      containers:
      - image: mpwsh/kt-operator:latest
        imagePullPolicy: Always
        name: operator
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
