deploy/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: server
  name: server
  namespace: kubetailor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: server
    spec:
      serviceAccountName: kubetailor
      containers:
      - image: mpwsh/kt-server:latest
        imagePullPolicy: Always
        name: server
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /app/server.yaml
          subPath: server.yaml
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        configMap:
          name: server-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
  name: server
  namespace: kubetailor
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: server
  type: ClusterIP
